21 August 2024: Wouter
	- Add cross platform freebsd, openbsd and netbsd to github ci.
	- Fix for char signedness warnings on NetBSD.

20 August 2024: Wouter
	- Add iter-scrub-ns, iter-scrub-cname and max-global-quota
	  configuration options.

19 August 2024: Wouter
	- Fix #1126: unbound-control-setup hangs while testing for openssl
	  presence starting from version 1.21.0.

9 August 2024: Wouter
	- Fix spelling for the cache-min-negative-ttl entry in the
	  example.conf.
	- Tag for release 1.21.0, the repository continues with 1.21.1
	  in development.

8 August 2024: Wouter
	- Fix CAMP issues with global quota. Thanks to Huayi Duan, Marco
	  Bearzi, Jodok Vieli, and Cagin Tanir from NetSec group, ETH Zurich.
	- Fix CacheFlush issues with limit on NS RRs. Thanks to Yehuda Afek,
	  Anat Bremler-Barr, Shoham Danino and Yuval Shavitt (Tel-Aviv
	  University and Reichman University).
	- Set version number to 1.21.0 for release. This has tag 1.21.0rc1.
	- Fix that for windows the module startup is called and sets up
	  the module-config.

2 August 2024: Wouter
	- Fix that alloc stats has strdup checks, it stops debuggers from
	  complaining about mismatch at free time.
	- Fix testbound for alloc stats strdup in util/alloc.c.
	- Merge #1090: Cookie secret file. Adds
	  `cookie-secret-file: "unbound_cookiesecrets.txt"` option to store
	  cookie secrets for EDNS COOKIE secret rollover. The remote control
	  add_cookie_secret, activate_cookie_secret and drop_cookie_secret
	  commands can be used for rollover, the command print_cookie_secrets
	  shows the values in use.
	- Fix that alloc stats for forwards and hints are printed, and when
	  alloc stats is enabled, the unit test for unbound control waits for
	  reloads to complete.

1 August 2024: Wouter
	- Fix dnstap test program, cleans up to have clean memory on exit,
	  for tap_data_free, does not delete NULL items. Also it does not try
	  to free the tail, specifically in the free of the list since that